# HailoExamples

./: README.md
CameraTracker/: CameraTracker.py  QRDetector.py  RealTimePlotter.py  SerialControl.py  arduino_ctrl.py  face_tracking.py  requirements.txt  zbar_gst.py
CameraTracker/Arduino/CameraTracker/: CameraTracker.ino  timed_trigger.h
CameraTracker/Arduino/serial_test/: serial_test.ino
Unity/HailoPose/: Assembly-CSharp.csproj  HailoPose.sln
Unity/HailoPose/Logs/: ApiUpdaterCheck.txt
Unity/HailoPose/ProjectSettings/: ProjectSettings.asset
Unity/HailoPose/Temp/: workerlic
Unity/fruit-ninja-unity-clone-master/Assets/: packages.config
frigate_vms/common/: add_metadata.py  client_zmq.py  client_zmq_remote.py  client_zmq_remote.py~  send_zmq.py
frigate_vms/vms_lpr/: plot_latest.sh  vms_lpr.sh  vms_lpr_multi.sh
frigate_vms/vms_person_attr/: emulate_stream.sh  multistream_test.py  person_attr_vms.py  person_attr_vms_video_overlay.py  requirements.txt  vms_person_attr.sh
pose_unity/: client_zmq.py  pose_estimation.sh  pose_estimation_tracking  pose_estimation_tracking_mspn  send_zmq.py
pose_unity/cpp/app/: hailo_app_cpp_utils.hpp  meson.build  pose_estimation_tracking.cpp  pose_estimation_tracking_mspn.cpp
pose_unity/cpp/postprocess/: meson.build  (+3 more)
pose_unity/resources/: joined_lightface_slim_tddfa_mobilenet_v1.hef
projector_integration/: augmented_reality.py  detect_aruco_video.py  guess_aruco_type.py  opencv_ar_video.py  opencv_generate_aruco.py  requirements.txt
tools/: docker_setup.sh  docker_setup.sh~  format_pipeline.py  link_scripts.sh
(+46 files in other folders)
